objects/vlocity_cmt__VlocityWebTrackingConfiguration__c.object
<CustomObject>
    <description>Tracking method definition metadata is defined here. Contains vendor specific information.</description>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <description>Description for the Web Tracking Configuration.</description>
        <inlineHelpText>Description for the Web Tracking Configuration.</inlineHelpText>
        <label>Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>Data pack support.</description>
        <externalId>true</externalId>
        <label>GlobalKey</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the current configurtion is active.</description>
        <inlineHelpText>Determines if the current configurtion is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingFramework__c</fullName>
        <description>Vendor specific information.</description>
        <inlineHelpText>Vendor specific information.</inlineHelpText>
        <label>Tracking Framework</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingVendor__c</fullName>
        <description>Analytics vendor name.</description>
        <inlineHelpText>Analytics vendor name.</inlineHelpText>
        <label>Tracking Vendor</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Google</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity Web Tracking Configuration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Web Tracking Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>